Debug overlay QOL improvements + Con_NPrintf() hook
* Added ability to invert rect to calculate offsets from bottom/right as well so debug text doesn't get out of view, or obstruct view when window is resized.
* Added Con_NPrintf() hook which shows detailed systems running times and VGUI panel debug information.

--- a/r5dev/resource/cfg/autoexec_client.cfg
+++ b/r5dev/resource/cfg/autoexec_client.cfg
@@ -1,3 +1,6 @@
+/////////////////////// client configuration file.
+// This file is executed automatically on startup.
+
 //////////////////////////
 //// CLIENT           ////
 //////////////////////////
