--- a/r5dev/resource/cfg/autoexec_server.cfg
+++ b/r5dev/resource/cfg/autoexec_server.cfg
@@ -1,3 +1,6 @@
+/////////////////////// server configuration file.
+// This file is executed automatically on startup.
+
 //////////////////////////
 //// SERVER           ////
 //////////////////////////
