--- a/r5dev/resource/cfg/autoexec_client_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_client_dev.cfg
@@ -1,52 +1,75 @@
+/////////////////// client_dev configuration file.
+// This file is executed automatically on startup.
+
 //////////////////////////
 //// CLIENT           ////
 //////////////////////////
-fps_max                      "120"              // Frame rate limiter when vsync is enabled.
-cl_noTimeoutLocalHost        "1"               // Do not time-out on local connections.
-cl_threaded_bone_setup       "0"               // Has to be disabled on the client to prevent deadlock.
+fps_max                               "120"             // Frame rate limiter when vsync is enabled.
+cl_noTimeoutLocalHost                 "1"               // Do not time-out on local connections.
+cl_threaded_bone_setup                "0"               // Has to be disabled on the client to prevent deadlock.
 
 //////////////////////////
 //// SIMULATION       //// !!WARNING!!: CHANGING THESE CAN CAUSE SIMULATION ISSUES. DO NOT CHANGE FOR NON-DEBUG ACTIVITY!
 //////////////////////////
-cl_predict_cmdlimit          "5000"            // Num client frames since last valid snapshot before pauzing simulation.
-cl_updaterate_mp             "20"              // Sets the num delta ticks per second.
-base_tickinterval_mp         "0.0500"          // Sets the num simulation frames per second.
+cl_predict_cmdlimit                   "5000"            // Num client frames since last valid snapshot before pauzing simulation.
+cl_updaterate_mp                      "20"              // Sets the num delta ticks per second.
+base_tickinterval_mp                  "0.0500"          // Sets the num simulation frames per second.
 
 //////////////////////////
 //// PLATFORM         ////
 //////////////////////////
-origin_disconnectWhenOffline "0"               // Whether the client disconnect itself from the server if Origin is offline.
+origin_disconnectWhenOffline          "0"               // Whether the client disconnect itself from the server if Origin is offline.
 
 //////////////////////////
 //// DEBUG TEXT       ////
 //////////////////////////
-cl_showfps                   "1"               // Shows detailed client/server data.
-cl_showpos                   "1"               // Shows detailed position data.
+cl_showfps                            "1"               // Shows detailed client/server data.
+cl_showpos                            "1"               // Shows detailed position data.
 
-cl_showsimstats              "1"               // Shows detailed simulation stats.
-cl_showgpustats              "1"               // Shows detailed GPU memory stats.
+host_speeds                           "2"               // Show general system running times.
+cl_showhoststats                      "1"               // Shows detailed host stats.
+cl_hoststats_invert_rect_x            "0"               // Inverts the X rect for host speeds debug overlay.
+cl_hoststats_invert_rect_y            "0"               // Inverts the Y rect for host speeds debug overlay.
+cl_hoststats_offset_x                 "0"               // Host stats 'X' offset.
+cl_hoststats_offset_y                 "0"               // Host stats 'Y' offset.
 
-cl_drawconsoleoverlay        "1"               // Shows DevMsg RUI console overlay.
-cl_consoleoverlay_lines      "5"               // Num log lines for RUI console overlay.
+cl_showsimstats                       "1"               // Shows detailed simulation stats.
+cl_simstats_invert_rect_x             "1"               // Inverts the X rect for simulation debug overlay.
+cl_simstats_invert_rect_y             "1"               // Inverts the Y rect for simulation debug overlay.
+cl_simstats_offset_x                  "650"             // Simulation stats 'X' offset.
+cl_simstats_offset_y                  "120"             // Simulation stats 'Y' offset.
 
-phys_showObjectCount         "1"               // Shows physics object count.
-rui_defaultDebugFontFace     "ArameMono"       // Sets the RUI debug font face.
-hitch_alert_color            "255 000 000 255" // Sets the RUI hitch alert font color.
+cl_showgpustats                       "1"               // Shows detailed GPU memory stats.
+cl_gpustats_invert_rect_x             "1"               // Inverts the X rect for texture streaming debug overlay.
+cl_gpustats_invert_rect_y             "1"               // Inverts the Y rect for texture streaming debug overlay.
+cl_gpustats_offset_x                  "650"             // GPU stats 'X' offset.
+cl_gpustats_offset_y                  "105"             // GPU stats 'Y' offset.
+
+cl_drawconsoleoverlay                 "1"               // Shows DevMsg RUI console overlay.
+cl_consoleoverlay_lines               "5"               // Num log lines for RUI console overlay.
+cl_consoleoverlay_invert_rect_x       "0"               // X offset for RUI console overlay.
+cl_consoleoverlay_invert_rect_y       "1"               // Y offset for RUI console overlay.
+cl_consoleoverlay_offset_x            "10"              // RUI console overlay 'X' offset.
+cl_consoleoverlay_offset_y            "170"             // RUI console overlay 'Y' offset.
+
+phys_showObjectCount                  "1"               // Shows physics object count.
+rui_defaultDebugFontFace              "ArameMono"       // Sets the RUI debug font face.
+hitch_alert_color                     "255 000 000 255" // Sets the RUI hitch alert font color.
 
 //////////////////////////
 //// DEBUG DRAW       ////
 //////////////////////////
-r_drawrenderboxes            "1"               // Enable render boxes.
-r_visualizetraces_duration   "25"              // Duration before code overlays get decayed.
-r_debug_overlay_nodecay      "0"               // If set, don't decay any overlay.
-cl_ent_bbox                  "1"               // Display entity bounding boxes.
-cl_ent_rbox                  "1"               // Display entity render boxes.
-cl_ent_absbox                "1"               // Display entity abs boxes.
+r_drawrenderboxes                     "1"               // Enable render boxes.
+r_visualizetraces_duration            "25"              // Duration before code overlays get decayed.
+r_debug_overlay_nodecay               "0"               // If set, don't decay any overlay.
+cl_ent_bbox                           "1"               // Display entity bounding boxes.
+cl_ent_rbox                           "1"               // Display entity render boxes.
+cl_ent_absbox                         "1"               // Display entity abs boxes.
 
 //////////////////////////
 //// MATSYS           ////
 //////////////////////////
-mat_showdxoutput             "1"               // Shows debug information from the DirectX hook system.
-gl_clear_color_buffer        "1"               // Enable or disable the clearing of the main color buffer.
-//mat_sync_rt                  "1"               // Enable to debug render threads more easily (!slower!).
-//mat_sync_rt_flushes_gpu      "1"               // Enable to debug render threads more easily (!slower!).
+mat_showdxoutput                      "1"               // Shows debug information from the DirectX hook system.
+gl_clear_color_buffer                 "1"               // Enable or disable the clearing of the main color buffer.
+//mat_sync_rt                           "1"               // Enable to debug render threads more easily (!slower!).
+//mat_sync_rt_flushes_gpu               "1"               // Enable to debug render threads more easily (!slower!).
