--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -1,3 +1,6 @@
+/////////////////// server_dev configuration file.
+// This file is executed automatically on startup.
+
 //////////////////////////
 //// SERVER           ////
 //////////////////////////
